fix front end base project
-remake with react